@@ -21,15 +21,17 @@
 
 package io.sirix.settings;
 
-import io.sirix.api.PageReadOnlyTrx;
+import io.sirix.api.StorageEngineReader;
 import io.sirix.cache.PageContainer;
 import io.sirix.cache.TransactionIntentLog;
 import io.sirix.node.interfaces.DataRecord;
 import io.sirix.page.PageFragmentKeyImpl;
 import io.sirix.page.PageReference;
-import org.checkerframework.checker.index.qual.NonNegative;
 import io.sirix.page.interfaces.KeyValuePage;
 import io.sirix.page.interfaces.PageFragmentKey;
+import org.checkerframework.checker.index.qual.NonNegative;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
 import java.util.Iterator;
@@ -51,41 +53,57 @@ public enum VersioningType {
   FULL {
     @Override
     public <V extends DataRecord, T extends KeyValuePage<V>> T combineRecordPages(final List<T> pages,
-        final @NonNegative int revToRestore, final PageReadOnlyTrx pageReadTrx) {
+        final @NonNegative int revToRestore, final StorageEngineReader pageReadTrx) {
       assert pages.size() == 1 : "Only one version of the page!";
-      return pages.get(0);
-    }
-
-    @Override
-    public <V extends DataRecord, T extends KeyValuePage<V>> PageContainer combineRecordPagesForModification(
-        final List<T> pages, final @NonNegative int revToRestore, final PageReadOnlyTrx pageReadTrx,
-        final PageReference reference, final TransactionIntentLog log) {
-      assert pages.size() == 1;
-      final T firstPage = pages.get(0);
-
-      final long recordPageKey = firstPage.getPageKey();
-
-      final T completePage = firstPage.newInstance(recordPageKey, firstPage.getIndexType(), pageReadTrx);
-      final T modifiedPage = firstPage.newInstance(recordPageKey, firstPage.getIndexType(), pageReadTrx);
-
-      var slots = firstPage.slots();
-      var deweyIds = firstPage.deweyIds();
+      var firstPage = pages.getFirst();
+      T completePage =  firstPage.newInstance(firstPage.getPageKey(), firstPage.getIndexType(), pageReadTrx);
 
       for (int i = 0; i < firstPage.size(); i++) {
-        byte[] slot = slots[i];
+        var slot = firstPage.getSlot(i);
 
         if (slot == null) {
           continue;
         }
 
         completePage.setSlot(slot, i);
-        completePage.setDeweyId(deweyIds[i], i);
-
-        modifiedPage.setSlot(slot, i);
-        modifiedPage.setDeweyId(deweyIds[i], i);
+        completePage.setDeweyId(firstPage.getDeweyId(i), i);
       }
 
-      final var pageContainer = PageContainer.getInstance(completePage, modifiedPage);
+      // Propagate FSST symbol table for string compression
+      propagateFsstSymbolTable(firstPage, completePage);
+
+      return completePage;
+    }
+
+    @Override
+    public <V extends DataRecord, T extends KeyValuePage<V>> PageContainer combineRecordPagesForModification(
+        final List<T> pages, final @NonNegative int revToRestore, final StorageEngineReader pageReadTrx,
+        final PageReference reference, final TransactionIntentLog log) {
+      assert pages.size() == 1;
+      final T firstPage = pages.getFirst();
+      final long recordPageKey = firstPage.getPageKey();
+
+      // OPTIMIZATION: Create only ONE page for modifications (not two)
+      // FULL versioning stores complete pages, so both complete and modified can be the same
+      final T modifiedPage = firstPage.newInstance(recordPageKey, firstPage.getIndexType(), pageReadTrx);
+
+      // Copy data once (not twice)
+      for (int i = 0; i < firstPage.size(); i++) {
+        var slot = firstPage.getSlot(i);
+        if (slot == null) {
+          continue;
+        }
+        modifiedPage.setSlot(slot, i);
+        modifiedPage.setDeweyId(firstPage.getDeweyId(i), i);
+      }
+
+      // Propagate FSST symbol table from the original page
+      propagateFsstSymbolTable(firstPage, modifiedPage);
+
+      // Same page for both complete and modified:
+      // - Writer reads from modifiedPage (sees own writes)
+      // - Parallel readers have original from cache (isolation preserved via orphan tracking)
+      final var pageContainer = PageContainer.getInstance(modifiedPage, modifiedPage);
       log.put(reference, pageContainer);
       return pageContainer;
     }
@@ -103,46 +121,62 @@ public enum VersioningType {
   DIFFERENTIAL {
     @Override
     public <V extends DataRecord, T extends KeyValuePage<V>> T combineRecordPages(final List<T> pages,
-        final @NonNegative int revToRestore, final PageReadOnlyTrx pageReadTrx) {
+        final @NonNegative int revToRestore, final StorageEngineReader pageReadTrx) {
       assert pages.size() <= 2;
-      final T firstPage = pages.get(0);
+      final T firstPage = pages.getFirst();
       final long recordPageKey = firstPage.getPageKey();
       final T pageToReturn = firstPage.newInstance(recordPageKey, firstPage.getIndexType(), pageReadTrx);
 
       final T latest = pages.get(0);
-      T fullDump = pages.size() == 1 ? pages.get(0) : pages.get(1);
+      final T fullDump = pages.size() == 1 ? pages.get(0) : pages.get(1);
 
       assert latest.getPageKey() == recordPageKey;
       assert fullDump.getPageKey() == recordPageKey;
 
-      byte[][] slots = firstPage.slots();
-      byte[][] deweyIds = firstPage.deweyIds();
-      for (int offset = 0; offset < slots.length; offset++) {
-        pageToReturn.setSlot(slots[offset], offset);
-        pageToReturn.setDeweyId(deweyIds[offset], offset);
+      // Use bitmap iteration for O(k) instead of O(1024)
+      final io.sirix.page.KeyValueLeafPage latestKvp = (io.sirix.page.KeyValueLeafPage) latest;
+      final io.sirix.page.KeyValueLeafPage returnKvp = (io.sirix.page.KeyValueLeafPage) pageToReturn;
+      
+      // Copy all populated slots from latest page
+      final int[] latestSlots = latestKvp.populatedSlots();
+      for (int i = 0; i < latestSlots.length; i++) {
+        final int offset = latestSlots[i];
+        pageToReturn.setSlot(firstPage.getSlot(offset), offset);
+        var deweyId = firstPage.getDeweyId(offset);
+        if (deweyId != null) {
+          pageToReturn.setDeweyId(deweyId, offset);
+        }
       }
+      
+      // Copy references from latest
       for (final Map.Entry<Long, PageReference> entry : latest.referenceEntrySet()) {
         pageToReturn.setPageReference(entry.getKey(), entry.getValue());
       }
 
-      // Skip full dump if not needed (fulldump equals latest page).
-      if (pages.size() == 2) {
-        slots = firstPage.slots();
-        deweyIds = firstPage.deweyIds();
-        for (int offset = 0; offset < slots.length; offset++) {
-          byte[] recordData = firstPage.getSlot(offset);
-          if (recordData == null) {
-            continue;
+      // Fill gaps from full dump if present
+      if (pages.size() == 2 && returnKvp.populatedSlotCount() < Constants.NDP_NODE_COUNT) {
+        final io.sirix.page.KeyValueLeafPage fullDumpKvp = (io.sirix.page.KeyValueLeafPage) fullDump;
+        final long[] filledBitmap = returnKvp.getSlotBitmap();
+        
+        // Use bitmap iteration for O(k) on fullDump
+        final int[] fullDumpSlots = fullDumpKvp.populatedSlots();
+        for (int i = 0; i < fullDumpSlots.length; i++) {
+          final int offset = fullDumpSlots[i];
+          // Check if slot already filled using bitmap (O(1))
+          if ((filledBitmap[offset >>> 6] & (1L << (offset & 63))) != 0) {
+            continue;  // Already filled from latest
           }
-          if (pageToReturn.getSlot(offset) == null) {
-            pageToReturn.setSlot(slots[offset], offset);
-          }
-          final var deweyId = deweyIds[offset];
-          if (deweyId != null && pageToReturn.getDeweyId(offset) == null) {
+          
+          var recordData = fullDump.getSlot(offset);
+          pageToReturn.setSlot(recordData, offset);
+          
+          var deweyId = fullDump.getDeweyId(offset);
+          if (deweyId != null) {
             pageToReturn.setDeweyId(deweyId, offset);
           }
         }
 
+        // Fill reference gaps
         for (final Entry<Long, PageReference> entry : fullDump.referenceEntrySet()) {
           if (pageToReturn.getPageReference(entry.getKey()) == null) {
             pageToReturn.setPageReference(entry.getKey(), entry.getValue());
@@ -153,92 +187,120 @@ public enum VersioningType {
         }
       }
 
+      // Propagate FSST symbol table for string compression
+      propagateFsstSymbolTable(firstPage, pageToReturn);
+
       return pageToReturn;
     }
 
     @Override
     public <V extends DataRecord, T extends KeyValuePage<V>> PageContainer combineRecordPagesForModification(
-        final List<T> pages, final @NonNegative int revToRestore, final PageReadOnlyTrx pageReadTrx,
+        final List<T> pages, final @NonNegative int revToRestore, final StorageEngineReader pageReadTrx,
         final PageReference reference, final TransactionIntentLog log) {
       assert pages.size() <= 2;
-      final T firstPage = pages.get(0);
+      final T firstPage = pages.getFirst();
       final long recordPageKey = firstPage.getPageKey();
       final int revision = pageReadTrx.getUberPage().getRevisionNumber();
 
-      reference.setPageFragments(List.of(new PageFragmentKeyImpl(firstPage.getRevision(), reference.getKey())));
+      // Update pageFragments on original reference
+      final List<io.sirix.page.interfaces.PageFragmentKey> pageFragmentKeys = List.of(new PageFragmentKeyImpl(
+          firstPage.getRevision(), 
+          reference.getKey(),
+          (int) pageReadTrx.getDatabaseId(),
+          (int) pageReadTrx.getResourceId()));
+      reference.setPageFragments(pageFragmentKeys);
 
       final T completePage = firstPage.newInstance(recordPageKey, firstPage.getIndexType(), pageReadTrx);
       final T modifiedPage = firstPage.newInstance(recordPageKey, firstPage.getIndexType(), pageReadTrx);
 
-      @SuppressWarnings("UnnecessaryLocalVariable") final T latest = firstPage;
-      T fullDump = pages.size() == 1 ? firstPage : pages.get(1);
-      final boolean isFullDump = revision % revToRestore == 0;
-
-      // Iterate through all nodes of the latest revision.
-      byte[][] slots = firstPage.slots();
-      byte[][] deweyIds = firstPage.deweyIds();
-      for (int offset = 0; offset < slots.length; offset++) {
-        completePage.setSlot(slots[offset], offset);
-        completePage.setDeweyId(deweyIds[offset], offset);
-
-        modifiedPage.setSlot(slots[offset], offset);
-        modifiedPage.setDeweyId(deweyIds[offset], offset);
+      // DIAGNOSTIC
+      if (io.sirix.page.KeyValueLeafPage.DEBUG_MEMORY_LEAKS && recordPageKey == 0) {
+        LOGGER.debug("DIFFERENTIAL combineForMod created: complete=" + System.identityHashCode(completePage) +
+            ", modified=" + System.identityHashCode(modifiedPage));
       }
 
-      // Iterate through all nodes of the latest revision.
+      final T latest = firstPage;
+      final T fullDump = pages.size() == 1 ? firstPage : pages.get(1);
+      final boolean isFullDumpRevision = revision % revToRestore == 0;
+
+      // Use bitmap iteration for O(k) instead of O(1024)
+      final io.sirix.page.KeyValueLeafPage latestKvp = (io.sirix.page.KeyValueLeafPage) latest;
+      final io.sirix.page.KeyValueLeafPage completeKvp = (io.sirix.page.KeyValueLeafPage) completePage;
+      final io.sirix.page.KeyValueLeafPage modifiedKvp = (io.sirix.page.KeyValueLeafPage) modifiedPage;
+      
+      // Copy all populated slots from latest to completePage using bitmap iteration
+      // For modifiedPage: use lazy copy - mark for preservation, actual copy deferred to commit time
+      final int[] latestSlots = latestKvp.populatedSlots();
+      for (int i = 0; i < latestSlots.length; i++) {
+        final int offset = latestSlots[i];
+        var recordData = firstPage.getSlot(offset);
+        var deweyId = firstPage.getDeweyId(offset);
+        
+        completePage.setSlot(recordData, offset);
+        if (deweyId != null) {
+          completePage.setDeweyId(deweyId, offset);
+        }
+        
+        // LAZY COPY: Mark slot for preservation instead of copying
+        // Actual copy from completePage happens in addReferences() if records[offset] == null
+        modifiedKvp.markSlotForPreservation(offset);
+      }
+
+      // Copy references from latest
       for (final Map.Entry<Long, PageReference> entry : latest.referenceEntrySet()) {
         completePage.setPageReference(entry.getKey(), entry.getValue());
         modifiedPage.setPageReference(entry.getKey(), entry.getValue());
       }
 
-      // If not all entries are filled.
-      if (latest.size() != Constants.NDP_NODE_COUNT) {
-        // Iterate through the full dump.
-        slots = firstPage.slots();
-        deweyIds = firstPage.deweyIds();
-        for (int offset = 0; offset < slots.length; offset++) {
-          var recordData = slots[offset];
-          if (completePage.getSlot(offset) == null) {
-            completePage.setSlot(slots[offset], offset);
+      // Fill gaps from full dump if not all slots are filled
+      if (completeKvp.populatedSlotCount() < Constants.NDP_NODE_COUNT && pages.size() == 2) {
+        final io.sirix.page.KeyValueLeafPage fullDumpKvp = (io.sirix.page.KeyValueLeafPage) fullDump;
+        final long[] filledBitmap = completeKvp.getSlotBitmap();
+        
+        // Use bitmap iteration on fullDump
+        final int[] fullDumpSlots = fullDumpKvp.populatedSlots();
+        for (int j = 0; j < fullDumpSlots.length; j++) {
+          final int offset = fullDumpSlots[j];
+          // Check if slot already filled using bitmap (O(1))
+          if ((filledBitmap[offset >>> 6] & (1L << (offset & 63))) != 0) {
+            continue;  // Already filled from latest
           }
-          if (isFullDump && modifiedPage.getSlot(offset) == null) {
-            modifiedPage.setSlot(recordData, offset);
-          }
-          var deweyId = deweyIds[offset];
-          if (completePage.getDeweyId(offset) == null) {
+          
+          var recordData = fullDump.getSlot(offset);
+          var deweyId = fullDump.getDeweyId(offset);
+          
+          completePage.setSlot(recordData, offset);
+          if (deweyId != null) {
             completePage.setDeweyId(deweyId, offset);
           }
-          if (isFullDump && modifiedPage.getDeweyId(offset) == null) {
-            modifiedPage.setDeweyId(deweyId, offset);
-          }
-
-          if (completePage.size() == Constants.NDP_NODE_COUNT) {
-            // Page is filled, thus skip all other entries of the full dump.
-            break;
+          
+          if (isFullDumpRevision) {
+            // LAZY COPY: Mark slot for preservation instead of copying
+            modifiedKvp.markSlotForPreservation(offset);
           }
         }
-      }
-      // If not all entries are filled.
-      if (latest.size() != Constants.NDP_NODE_COUNT) {
-        // Iterate through the full dump.
+        
+        // Fill reference gaps from fullDump
         for (final Map.Entry<Long, PageReference> entry : fullDump.referenceEntrySet()) {
           if (completePage.getPageReference(entry.getKey()) == null) {
             completePage.setPageReference(entry.getKey(), entry.getValue());
           }
 
-          if (isFullDump && modifiedPage.getPageReference(entry.getKey()) == null) {
+          if (isFullDumpRevision && modifiedPage.getPageReference(entry.getKey()) == null) {
             modifiedPage.setPageReference(entry.getKey(), entry.getValue());
           }
 
           if (completePage.size() == Constants.NDP_NODE_COUNT) {
-            // Page is filled, thus skip all other entries of the full dump.
             break;
           }
         }
       }
 
+      // Set completePage reference for lazy copying at commit time
+      modifiedKvp.setCompletePageRef(completeKvp);
+
       final var pageContainer = PageContainer.getInstance(completePage, modifiedPage);
-      log.put(reference, pageContainer);
+      log.put(reference, pageContainer);  // TIL will remove from caches before mutating
       return pageContainer;
     }
 
@@ -261,132 +323,156 @@ public enum VersioningType {
   INCREMENTAL {
     @Override
     public <V extends DataRecord, T extends KeyValuePage<V>> T combineRecordPages(final List<T> pages,
-        final @NonNegative int revToRestore, final PageReadOnlyTrx pageReadTrx) {
+        final @NonNegative int revToRestore, final StorageEngineReader pageReadTrx) {
       assert pages.size() <= revToRestore;
-      final T firstPage = pages.get(0);
+      final T firstPage = pages.getFirst();
       final long recordPageKey = firstPage.getPageKey();
       final T pageToReturn = firstPage.newInstance(firstPage.getPageKey(), firstPage.getIndexType(), pageReadTrx);
 
-      boolean filledPage = false;
+      // Track which slots are already filled using bitmap from pageToReturn
+      // This enables O(k) iteration instead of O(1024)
+      final io.sirix.page.KeyValueLeafPage returnPage = (io.sirix.page.KeyValueLeafPage) pageToReturn;
+      final long[] filledBitmap = returnPage.getSlotBitmap();
+      
+      // Track slot count incrementally - CRITICAL: don't call populatedSlotCount() in loop
+      int filledSlotCount = 0;
+      
       for (final T page : pages) {
         assert page.getPageKey() == recordPageKey;
-        if (filledPage) {
+        if (filledSlotCount == Constants.NDP_NODE_COUNT) {
           break;
         }
 
-        final byte[][] slots = page.slots();
-        final byte[][] deweyIds = page.deweyIds();
-
-        for (int offset = 0; offset < slots.length; offset++) {
-          final var recordData = slots[offset];
-
-          if (recordData == null) {
-            continue;
+        // Use bitmap iteration for O(k) instead of O(1024)
+        final io.sirix.page.KeyValueLeafPage kvPage = (io.sirix.page.KeyValueLeafPage) page;
+        final int[] populatedSlots = kvPage.populatedSlots();
+        
+        for (final int offset : populatedSlots) {
+          // Check if slot already filled using bitmap (O(1))
+          if ((filledBitmap[offset >>> 6] & (1L << (offset & 63))) != 0) {
+            continue;  // Already filled from newer fragment
           }
-
-          if (pageToReturn.getSlot(offset) == null) {
-            pageToReturn.setSlot(recordData, offset);
-          }
-          final var deweyId = deweyIds[offset];
-          if (pageToReturn.getDeweyId(offset) == null) {
+          
+          final var recordData = page.getSlot(offset);
+          pageToReturn.setSlot(recordData, offset);
+          filledSlotCount++;
+          
+          final var deweyId = page.getDeweyId(offset);
+          if (deweyId != null) {
             pageToReturn.setDeweyId(deweyId, offset);
           }
 
-          if (pageToReturn.size() == Constants.NDP_NODE_COUNT) {
-            filledPage = true;
+          if (filledSlotCount == Constants.NDP_NODE_COUNT) {
             break;
           }
         }
 
-        if (!filledPage) {
+        if (filledSlotCount < Constants.NDP_NODE_COUNT) {
           for (final Entry<Long, PageReference> entry : page.referenceEntrySet()) {
-            final Long recordKey = entry.getKey();
-            if (pageToReturn.getPageReference(recordKey) == null) {
-              pageToReturn.setPageReference(recordKey, entry.getValue());
+            final Long key = entry.getKey();
+            if (pageToReturn.getPageReference(key) == null) {
+              pageToReturn.setPageReference(key, entry.getValue());
               if (pageToReturn.size() == Constants.NDP_NODE_COUNT) {
-                filledPage = true;
                 break;
               }
             }
           }
         }
       }
+
+      // Propagate FSST symbol table for string compression
+      propagateFsstSymbolTable(firstPage, pageToReturn);
 
       return pageToReturn;
     }
 
     @Override
     public <V extends DataRecord, T extends KeyValuePage<V>> PageContainer combineRecordPagesForModification(
-        final List<T> pages, final int revToRestore, final PageReadOnlyTrx pageReadTrx, final PageReference reference,
+        final List<T> pages, final int revToRestore, final StorageEngineReader pageReadTrx, PageReference reference,
         final TransactionIntentLog log) {
-      final T firstPage = pages.get(0);
+      final T firstPage = pages.getFirst();
       final long recordPageKey = firstPage.getPageKey();
       final var previousPageFragmentKeys = new ArrayList<PageFragmentKey>(reference.getPageFragments().size() + 1);
-      previousPageFragmentKeys.add(new PageFragmentKeyImpl(firstPage.getRevision(), reference.getKey()));
+      previousPageFragmentKeys.add(new PageFragmentKeyImpl(
+          firstPage.getRevision(), 
+          reference.getKey(),
+          (int) pageReadTrx.getDatabaseId(),
+          (int) pageReadTrx.getResourceId()));
       for (int i = 0, previousRefKeysSize = reference.getPageFragments().size();
            i < previousRefKeysSize && previousPageFragmentKeys.size() < revToRestore - 1; i++) {
         previousPageFragmentKeys.add(reference.getPageFragments().get(i));
       }
 
+      // Update pageFragments on original reference
       reference.setPageFragments(previousPageFragmentKeys);
 
       final T completePage = firstPage.newInstance(recordPageKey, firstPage.getIndexType(), pageReadTrx);
       final T modifiedPage = firstPage.newInstance(recordPageKey, firstPage.getIndexType(), pageReadTrx);
       final boolean isFullDump = pages.size() == revToRestore;
+      
+      // DIAGNOSTIC
+      if (io.sirix.page.KeyValueLeafPage.DEBUG_MEMORY_LEAKS && recordPageKey == 0) {
+        LOGGER.debug("INCREMENTAL combineForMod created: complete=" + System.identityHashCode(completePage) +
+            ", modified=" + System.identityHashCode(modifiedPage));
+      }
 
-      boolean filledPage = false;
+      // Use bitmap for O(k) iteration instead of O(1024)
+      final io.sirix.page.KeyValueLeafPage completeKvp = (io.sirix.page.KeyValueLeafPage) completePage;
+      final io.sirix.page.KeyValueLeafPage modifiedKvp = (io.sirix.page.KeyValueLeafPage) modifiedPage;
+      final long[] filledBitmap = completeKvp.getSlotBitmap();
+      
+      // Track slot count incrementally - CRITICAL: don't call populatedSlotCount() in loop
+      int filledSlotCount = 0;
+      
       for (final T page : pages) {
         assert page.getPageKey() == recordPageKey;
-        if (filledPage) {
+        if (filledSlotCount == Constants.NDP_NODE_COUNT) {
           break;
         }
 
-        final V[] records = page.records();
-        final byte[][] slots = page.slots();
-        final byte[][] deweyIds = page.deweyIds();
-        for (int offset = 0; offset < records.length; offset++) {
-          final var recordData = slots[offset];
+        // Use bitmap iteration for O(k) instead of O(1024)
+        final io.sirix.page.KeyValueLeafPage kvPage = (io.sirix.page.KeyValueLeafPage) page;
+        final int[] populatedSlots = kvPage.populatedSlots();
 
-          if (recordData == null) {
-            continue;
+        for (final int offset : populatedSlots) {
+          // Check if slot already filled using bitmap (O(1))
+          if ((filledBitmap[offset >>> 6] & (1L << (offset & 63))) != 0) {
+            continue;  // Already filled from newer fragment
           }
 
-          if (completePage.getSlot(offset) == null) {
-            completePage.setSlot(recordData, offset);
+          final var recordData = page.getSlot(offset);
+          completePage.setSlot(recordData, offset);
+          filledSlotCount++;
 
-            if (modifiedPage.getSlot(offset) == null && isFullDump) {
-              modifiedPage.setSlot(recordData, offset);
-            }
+          if (isFullDump) {
+            // LAZY COPY: Mark slot for preservation instead of copying
+            // Actual copy from completePage happens in addReferences() if records[offset] == null
+            modifiedKvp.markSlotForPreservation(offset);
           }
-          final var deweyId = deweyIds[offset];
-          // Caching the complete page.
-          if (completePage.getDeweyId(offset) == null) {
+          
+          final var deweyId = page.getDeweyId(offset);
+          if (deweyId != null) {
             completePage.setDeweyId(deweyId, offset);
-
-            if (modifiedPage.getDeweyId(offset) == null && isFullDump) {
-              modifiedPage.setDeweyId(deweyId, offset);
-            }
+            // DeweyId will be lazily copied along with slot in addReferences()
           }
-          if (completePage.size() == Constants.NDP_NODE_COUNT) {
-            filledPage = true;
+          
+          if (filledSlotCount == Constants.NDP_NODE_COUNT) {
             break;
           }
         }
 
-        if (!filledPage) {
+        if (filledSlotCount < Constants.NDP_NODE_COUNT) {
           for (final Entry<Long, PageReference> entry : page.referenceEntrySet()) {
-            // Caching the complete page.
             final Long key = entry.getKey();
             assert key != null;
             if (completePage.getPageReference(key) == null) {
               completePage.setPageReference(key, entry.getValue());
 
-              if (modifiedPage.getPageReference(entry.getKey()) == null && isFullDump) {
+              if (isFullDump && modifiedPage.getPageReference(key) == null) {
                 modifiedPage.setPageReference(key, entry.getValue());
               }
 
               if (completePage.size() == Constants.NDP_NODE_COUNT) {
-                filledPage = true;
                 break;
               }
             }
@@ -394,8 +480,13 @@ public enum VersioningType {
         }
       }
 
+      // Set completePage reference for lazy copying at commit time (only for full-dump)
+      if (isFullDump) {
+        modifiedKvp.setCompletePageRef(completeKvp);
+      }
+
       final var pageContainer = PageContainer.getInstance(completePage, modifiedPage);
-      log.put(reference, pageContainer);
+      log.put(reference, pageContainer);  // TIL will remove from caches before mutating
       return pageContainer;
     }
 
@@ -426,49 +517,56 @@ public enum VersioningType {
   SLIDING_SNAPSHOT {
     @Override
     public <V extends DataRecord, T extends KeyValuePage<V>> T combineRecordPages(final List<T> pages,
-        final @NonNegative int revToRestore, final PageReadOnlyTrx pageReadTrx) {
+        final @NonNegative int revToRestore, final StorageEngineReader pageReadTrx) {
       assert pages.size() <= revToRestore;
-      final T firstPage = pages.get(0);
+      final T firstPage = pages.getFirst();
       final long recordPageKey = firstPage.getPageKey();
       final T returnVal = firstPage.newInstance(firstPage.getPageKey(), firstPage.getIndexType(), pageReadTrx);
 
-      boolean filledPage = false;
+      // Track which slots are already filled using bitmap from returnVal
+      // This enables O(k) iteration instead of O(1024)
+      final io.sirix.page.KeyValueLeafPage returnKvp = (io.sirix.page.KeyValueLeafPage) returnVal;
+      final long[] filledBitmap = returnKvp.getSlotBitmap();
+      
+      // Track slot count incrementally - CRITICAL: don't call populatedSlotCount() in loop
+      int filledSlotCount = 0;
+      
       for (final T page : pages) {
         assert page.getPageKey() == recordPageKey;
-        if (filledPage) {
+        if (filledSlotCount == Constants.NDP_NODE_COUNT) {
           break;
         }
 
-        final byte[][] slots = page.slots();
-        final byte[][] deweyIds = page.deweyIds();
-        for (int offset = 0; offset < slots.length; offset++) {
-          final var recordData = slots[offset];
+        // Use bitmap iteration for O(k) instead of O(1024)
+        final io.sirix.page.KeyValueLeafPage kvPage = (io.sirix.page.KeyValueLeafPage) page;
+        final int[] populatedSlots = kvPage.populatedSlots();
 
-          if (recordData == null) {
-            continue;
+        for (final int offset : populatedSlots) {
+          // Check if slot already filled using bitmap (O(1))
+          if ((filledBitmap[offset >>> 6] & (1L << (offset & 63))) != 0) {
+            continue;  // Already filled from newer fragment
           }
 
-          if (returnVal.getSlot(offset) == null) {
-            returnVal.setSlot(recordData, offset);
-          }
+          final var recordData = page.getSlot(offset);
+          returnVal.setSlot(recordData, offset);
+          filledSlotCount++;
 
-          final var deweyId = deweyIds[offset];
-          if (returnVal.getDeweyId(offset) == null) {
+          final var deweyId = page.getDeweyId(offset);
+          if (deweyId != null) {
             returnVal.setDeweyId(deweyId, offset);
           }
+          
+          if (filledSlotCount == Constants.NDP_NODE_COUNT) {
+            break;
+          }
         }
 
-        if (returnVal.size() == Constants.NDP_NODE_COUNT) {
-          filledPage = true;
-        }
-
-        if (!filledPage) {
+        if (filledSlotCount < Constants.NDP_NODE_COUNT) {
           for (final Entry<Long, PageReference> entry : page.referenceEntrySet()) {
-            final Long recordKey = entry.getKey();
-            if (returnVal.getPageReference(recordKey) == null) {
-              returnVal.setPageReference(recordKey, entry.getValue());
+            final Long key = entry.getKey();
+            if (returnVal.getPageReference(key) == null) {
+              returnVal.setPageReference(key, entry.getValue());
               if (returnVal.size() == Constants.NDP_NODE_COUNT) {
-                filledPage = true;
                 break;
               }
             }
@@ -476,99 +574,155 @@ public enum VersioningType {
         }
       }
 
+      // Propagate FSST symbol table for string compression
+      propagateFsstSymbolTable(firstPage, returnVal);
+
       return returnVal;
     }
 
     @Override
     public <V extends DataRecord, T extends KeyValuePage<V>> PageContainer combineRecordPagesForModification(
-        final List<T> pages, final int revToRestore, final PageReadOnlyTrx pageReadTrx, final PageReference reference,
+        final List<T> pages, final int revToRestore, final StorageEngineReader pageReadTrx, final PageReference reference,
         final TransactionIntentLog log) {
-      final T firstPage = pages.get(0);
+      final T firstPage = pages.getFirst();
       final long recordPageKey = firstPage.getPageKey();
       final var previousPageFragmentKeys = new ArrayList<PageFragmentKey>(reference.getPageFragments().size() + 1);
-      previousPageFragmentKeys.add(new PageFragmentKeyImpl(firstPage.getRevision(), reference.getKey()));
+      previousPageFragmentKeys.add(new PageFragmentKeyImpl(
+          firstPage.getRevision(), 
+          reference.getKey(),
+          (int) pageReadTrx.getDatabaseId(),
+          (int) pageReadTrx.getResourceId()));
       for (int i = 0, previousRefKeysSize = reference.getPageFragments().size();
            i < previousRefKeysSize && previousPageFragmentKeys.size() < revToRestore - 1; i++) {
         previousPageFragmentKeys.add(reference.getPageFragments().get(i));
       }
 
+      // Update pageFragments on original reference
       reference.setPageFragments(previousPageFragmentKeys);
 
+      // Only create TWO pages instead of THREE - use bitmap instead of temp page
+      // This saves 64KB allocation per combine operation
       final T completePage = firstPage.newInstance(recordPageKey, firstPage.getIndexType(), pageReadTrx);
       final T modifyingPage = firstPage.newInstance(recordPageKey, firstPage.getIndexType(), pageReadTrx);
+      
+      // OPTIMIZATION: Use bitmap (128 bytes) instead of temp page (64KB)
+      // inWindowBitmap tracks which slots exist in the sliding window
+      final long[] inWindowBitmap = new long[16];  // 16 * 64 = 1024 bits
+      
+      // DIAGNOSTIC
+      if (io.sirix.page.KeyValueLeafPage.DEBUG_MEMORY_LEAKS && recordPageKey == 0) {
+        LOGGER.debug("SLIDING_SNAPSHOT combineForMod created 2 pages + bitmap: complete=" + 
+            System.identityHashCode(completePage) + ", modifying=" + System.identityHashCode(modifyingPage));
+      }
 
-      final T pageWithRecordsInSlidingWindow =
-          firstPage.newInstance(recordPageKey, firstPage.getIndexType(), pageReadTrx);
-
-      boolean filledPage = false;
-      for (int i = 0; i < pages.size() && !filledPage; i++) {
+      final io.sirix.page.KeyValueLeafPage completeKvp = (io.sirix.page.KeyValueLeafPage) completePage;
+      final io.sirix.page.KeyValueLeafPage modifyingKvp = (io.sirix.page.KeyValueLeafPage) modifyingPage;
+      final long[] filledBitmap = completeKvp.getSlotBitmap();
+      
+      final boolean hasOutOfWindowPage = (pages.size() == revToRestore);
+      final int lastInWindowIndex = hasOutOfWindowPage ? pages.size() - 2 : pages.size() - 1;
+      
+      // Track slot count incrementally - CRITICAL: don't call populatedSlotCount() in loop
+      int filledSlotCount = 0;
+      
+      // Phase 1: Process in-window fragments, track populated slots in bitmap
+      for (int i = 0; i <= lastInWindowIndex; i++) {
         final T page = pages.get(i);
         assert page.getPageKey() == recordPageKey;
 
-        final boolean isPageOutOfSlidingWindow = (i == pages.size() - 1 && revToRestore == pages.size());
+        // Use bitmap iteration for O(k) instead of O(1024)
+        final io.sirix.page.KeyValueLeafPage kvPage = (io.sirix.page.KeyValueLeafPage) page;
+        final int[] populatedSlots = kvPage.populatedSlots();
 
-        final byte[][] slots = page.slots();
-        final byte[][] deweyIds = page.deweyIds();
-        for (int offset = 0; offset < slots.length; offset++) {
-          final var recordData = slots[offset];
-          final var deweyId = deweyIds[offset];
-
-          if (recordData == null) {
-            continue;
+        for (final int offset : populatedSlots) {
+          // Mark slot as in-window (for Phase 2 check)
+          inWindowBitmap[offset >>> 6] |= (1L << (offset & 63));
+          
+          // Check if slot already filled in completePage using bitmap (O(1))
+          if ((filledBitmap[offset >>> 6] & (1L << (offset & 63))) != 0) {
+            continue;  // Already filled from newer fragment
           }
 
-          if (!isPageOutOfSlidingWindow) {
-            pageWithRecordsInSlidingWindow.setSlot(recordData, offset);
-            pageWithRecordsInSlidingWindow.setDeweyId(deweyId, offset);
-          }
-
-          if (completePage.getSlot(offset) == null) {
-            completePage.setSlot(recordData, offset);
-          }
-          if (isPageOutOfSlidingWindow && pageWithRecordsInSlidingWindow.getSlot(offset) == null) {
-            modifyingPage.setSlot(recordData, offset);
-          }
-
-          if (completePage.getDeweyId(offset) == null) {
+          final var recordData = page.getSlot(offset);
+          completePage.setSlot(recordData, offset);
+          filledSlotCount++;
+          
+          final var deweyId = page.getDeweyId(offset);
+          if (deweyId != null) {
             completePage.setDeweyId(deweyId, offset);
           }
-          if (isPageOutOfSlidingWindow && pageWithRecordsInSlidingWindow.getDeweyId(offset) == null) {
-            modifyingPage.setDeweyId(deweyId, offset);
+          
+          if (filledSlotCount == Constants.NDP_NODE_COUNT) {
+            break;  // Page is full
           }
         }
 
-        if (completePage.size() == Constants.NDP_NODE_COUNT) {
-          filledPage = true;
-        }
-
-        if (!filledPage) {
-          for (final Entry<Long, PageReference> entry : page.referenceEntrySet()) {
-            // Caching the complete page.
-            final Long key = entry.getKey();
-            assert key != null;
-
-            if (!isPageOutOfSlidingWindow) {
-              pageWithRecordsInSlidingWindow.setPageReference(key, entry.getValue());
-            }
-
-            if (completePage.getPageReference(key) == null) {
-              completePage.setPageReference(key, entry.getValue());
-            }
-
-            if (isPageOutOfSlidingWindow && pageWithRecordsInSlidingWindow.getPageReference(key) == null) {
-              modifyingPage.setPageReference(key, entry.getValue());
-            }
-
-            if (completePage.size() == Constants.NDP_NODE_COUNT) {
-              filledPage = true;
-              break;
-            }
+        // Handle references
+        for (final Entry<Long, PageReference> entry : page.referenceEntrySet()) {
+          final Long key = entry.getKey();
+          if (completePage.getPageReference(key) == null) {
+            completePage.setPageReference(key, entry.getValue());
           }
+        }
+        
+        if (filledSlotCount == Constants.NDP_NODE_COUNT) {
+          break;  // Page is full
         }
       }
+      
+      // Phase 2: Process out-of-window fragment if present
+      // LAZY COPY: Mark slots for preservation instead of copying
+      // Actual copy from completePage happens in addReferences() if records[offset] == null
+      if (hasOutOfWindowPage) {
+        final T outOfWindowPage = pages.get(pages.size() - 1);
+        assert outOfWindowPage.getPageKey() == recordPageKey;
+        
+        final io.sirix.page.KeyValueLeafPage outOfWindowKvp = (io.sirix.page.KeyValueLeafPage) outOfWindowPage;
+        final int[] populatedSlots = outOfWindowKvp.populatedSlots();
+        
+        for (final int offset : populatedSlots) {
+          final var recordData = outOfWindowPage.getSlot(offset);
+          final var deweyId = outOfWindowPage.getDeweyId(offset);
+          
+          // Add to completePage if not already filled
+          if ((filledBitmap[offset >>> 6] & (1L << (offset & 63))) == 0) {
+            completePage.setSlot(recordData, offset);
+            if (deweyId != null) {
+              completePage.setDeweyId(deweyId, offset);
+            }
+          }
+          
+          // If slot is NOT in the sliding window, mark for preservation in modifyingPage
+          // (these are records falling out of the window that need to be written)
+          if ((inWindowBitmap[offset >>> 6] & (1L << (offset & 63))) == 0) {
+            // LAZY COPY: Mark slot for preservation instead of copying
+            modifyingKvp.markSlotForPreservation(offset);
+          }
+        }
+        
+        // Handle references from out-of-window page
+        for (final Entry<Long, PageReference> entry : outOfWindowPage.referenceEntrySet()) {
+          final Long key = entry.getKey();
+          if (completePage.getPageReference(key) == null) {
+            completePage.setPageReference(key, entry.getValue());
+          }
+          // References falling out of window - check if not in window
+          if (modifyingPage.getPageReference(key) == null) {
+            // Add to modifying if needed (reference handling simplified)
+            modifyingPage.setPageReference(key, entry.getValue());
+          }
+        }
+        
+        // Set completePage reference for lazy copying at commit time
+        modifyingKvp.setCompletePageRef(completeKvp);
+      }
+
+      // Propagate FSST symbol tables
+      propagateFsstSymbolTable(firstPage, completePage);
+      propagateFsstSymbolTable(firstPage, modifyingPage);
 
       final var pageContainer = PageContainer.getInstance(completePage, modifyingPage);
-      log.put(reference, pageContainer);
+      log.put(reference, pageContainer);  // TIL will remove from caches before mutating
       return pageContainer;
     }
 
@@ -593,27 +747,7 @@ public enum VersioningType {
     }
   };
 
-  private static <V extends DataRecord, T extends KeyValuePage<V>> void setSlots(T pageToReadFrom,
-      T... pagesToSetSlots) {
-    final byte[][] slots = pageToReadFrom.slots();
-    for (int offset = 0; offset < slots.length; offset++) {
-      final var recordData = slots[offset];
-      for (T page : pagesToSetSlots) {
-        page.setSlot(recordData, offset);
-      }
-    }
-  }
-
-  private static <V extends DataRecord, T extends KeyValuePage<V>> void setDeweyIds(T pageToReadFrom,
-      T... pagesToSetDeweyIds) {
-    final byte[][] deweyIds = pageToReadFrom.deweyIds();
-    for (int offset = 0; offset < deweyIds.length; offset++) {
-      final var deweyId = deweyIds[offset];
-      for (T page : pagesToSetDeweyIds) {
-        page.setDeweyId(deweyId, offset);
-      }
-    }
-  }
+  private static final Logger LOGGER = LoggerFactory.getLogger(VersioningType.class);
 
   public static VersioningType fromString(String versioningType) {
     for (final var type : values()) {
@@ -633,7 +767,7 @@ public enum VersioningType {
    * @return the complete {@link KeyValuePage}
    */
   public abstract <V extends DataRecord, T extends KeyValuePage<V>> T combineRecordPages(final List<T> pages,
-      final @NonNegative int revsToRestore, final PageReadOnlyTrx pageReadTrx);
+      final @NonNegative int revsToRestore, final StorageEngineReader pageReadTrx);
 
   /**
    * Method to reconstruct a complete {@link KeyValuePage} for reading as well as a
@@ -645,7 +779,7 @@ public enum VersioningType {
    * writing
    */
   public abstract <V extends DataRecord, T extends KeyValuePage<V>> PageContainer combineRecordPagesForModification(
-      final List<T> pages, final @NonNegative int revsToRestore, final PageReadOnlyTrx pageReadTrx,
+      final List<T> pages, final @NonNegative int revsToRestore, final StorageEngineReader pageReadTrx,
       final PageReference reference, final TransactionIntentLog log);
 
   /**
@@ -656,4 +790,27 @@ public enum VersioningType {
    * @return revision root page numbers needed to restore a {@link KeyValuePage}
    */
   public abstract int[] getRevisionRoots(final @NonNegative int previousRevision, final @NonNegative int revsToRestore);
+
+  /**
+   * Propagate FSST symbol table from source page to target page.
+   * This is needed when combining page fragments to ensure the combined page
+   * can decompress string values.
+   *
+   * @param sourcePage the source page with the FSST symbol table
+   * @param targetPage the target page to set the symbol table on
+   * @param <V> the data record type
+   * @param <T> the key-value page type
+   */
+  protected static <V extends DataRecord, T extends KeyValuePage<V>> void propagateFsstSymbolTable(
+      final T sourcePage, final T targetPage) {
+    if (sourcePage instanceof io.sirix.page.KeyValueLeafPage sourceKvp 
+        && targetPage instanceof io.sirix.page.KeyValueLeafPage targetKvp) {
+      byte[] fsstSymbolTable = sourceKvp.getFsstSymbolTable();
+      if (fsstSymbolTable != null && fsstSymbolTable.length > 0) {
+        targetKvp.setFsstSymbolTable(fsstSymbolTable);
+      }
+    }
+  }
 }
+
+
